manifests/prd/apps-gateway/Namespace-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: gateway
