manifests/prd/apps-gateway/Gateway-apps.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apps
  namespace: gateway
spec:
  gatewayClassName: envoy
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.kidibox.net'
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: apps-tls
        mode: Terminate
